# Traffic-Lights-Classification

./: README.md  pyproject.toml  requirements.txt
doc/: README.md
src/: Traffic-Light-Classfy.ipynb
src/traffic_light_classfy/: GA.py  config.py  constants.py  hsv_process.py  load_data.py  main.py  standardize.py  visualize.py
