[tool.poetry]
name = "traffic-lights-classification"
version = "0.1.0"
description = "基于OpenCV的红绿灯识别"
authors = ["shawshany <victor.xsyang@gmail.com>","muzing <muzi2001@foxmail.com>"]
readme = "README.md"

# 使用清华pypi镜像
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.24.0"
opencv-python = "~4.5.0.0"  # PyCharm 暂不支持更高版本的代码提示，很怪
matplotlib = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.0"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "compiled_resources.py"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
